Naveagtion ,seção home e seção projects

--- a/index.html
+++ b/index.html
@@ -8,10 +8,90 @@
   <title>Portfolio</title>
 
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://kit.fontawesome.com/8ec406ee8f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  teste
+  <nav id="navbar">
+    <ul>
+      <li>
+        <a href="#welcome-section">About</a>
+      </li>
+      <li>
+        <a href="#projects">Work</a>
+      </li>
+      <li>
+        <a href="#contact">Contact</a>
+      </li>
+    </ul>
+  </nav>
+
+  <section id="welcome-section">
+    <h1>Hey I am Ronaldo</h1>
+    <p>a web developer</p>
+  </section>
+
+  <section id="projects">
+    <h2>These are some of my projects</h2>
+    <div class="projects-content">
+      <a href="https://codepen.io/dev-joseronaldo/pen/rNydEPo" class="project-tile">
+        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="">
+        <p>
+          <span class="code">&lt;</span>
+          Tribute Page
+          <span class="code">/ &gt;</span>
+        </p>
+      </a>
+
+      <a href="https://codepen.io/dev-joseronaldo/pen/rNydEPo" class="project-tile">
+        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="">
+        <p>
+          <span class="code">&lt;</span>
+          Tribute Page
+          <span class="code">/ &gt;</span>
+        </p>
+      </a>
+
+      <a href="https://codepen.io/dev-joseronaldo/pen/rNydEPo" class="project-tile">
+        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="">
+        <p>
+          <span class="code">&lt;</span>
+          Tribute Page
+          <span class="code">/ &gt;</span>
+        </p>
+      </a>
+
+      <a href="https://codepen.io/dev-joseronaldo/pen/rNydEPo" class="project-tile">
+        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="">
+        <p>
+          <span class="code">&lt;</span>
+          Tribute Page
+          <span class="code">/ &gt;</span>
+        </p>
+      </a>
+
+      <a href="https://codepen.io/dev-joseronaldo/pen/rNydEPo" class="project-tile">
+        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="">
+        <p>
+          <span class="code">&lt;</span>
+          Tribute Page
+          <span class="code">/ &gt;</span>
+        </p>
+      </a>
+
+      <a href="https://codepen.io/dev-joseronaldo/pen/rNydEPo" class="project-tile">
+        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="">
+        <p>
+          <span class="code">&lt;</span>
+          Tribute Page
+          <span class="code">/ &gt;</span>
+        </p>
+      </a>
+
+    </div>
+    <a href="https://codepen.io/FreeCodeCamp/" class="btn" target="_blank">Show all<i
+        class="fas fa-chevron-right"></i></a>
+  </section>
 </body>
 
 </html>
