seção contat e footer

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+
   <nav id="navbar">
     <ul>
       <li>
@@ -21,7 +22,7 @@
         <a href="#projects">Work</a>
       </li>
       <li>
-        <a href="#contact">Contact</a>
+        <a href="#contacts">Contact</a>
       </li>
     </ul>
   </nav>
@@ -35,7 +36,8 @@
     <h2>These are some of my projects</h2>
     <div class="projects-content">
       <a href="https://codepen.io/dev-joseronaldo/pen/rNydEPo" class="project-tile">
-        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="">
+        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"
+          alt="Print do projeto Tribute Page , onde é visto uma imagem com 8 pessoas conversando em um milharal.">
         <p>
           <span class="code">&lt;</span>
           Tribute Page
@@ -44,7 +46,8 @@
       </a>
 
       <a href="https://codepen.io/dev-joseronaldo/pen/rNydEPo" class="project-tile">
-        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="">
+        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"
+          alt="Print do projeto Tribute Page , onde é visto uma imagem com 8 pessoas conversando em um milharal.">
         <p>
           <span class="code">&lt;</span>
           Tribute Page
@@ -53,7 +56,8 @@
       </a>
 
       <a href="https://codepen.io/dev-joseronaldo/pen/rNydEPo" class="project-tile">
-        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="">
+        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"
+          alt="Print do projeto Tribute Page , onde é visto uma imagem com 8 pessoas conversando em um milharal.">
         <p>
           <span class="code">&lt;</span>
           Tribute Page
@@ -62,7 +66,8 @@
       </a>
 
       <a href="https://codepen.io/dev-joseronaldo/pen/rNydEPo" class="project-tile">
-        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="">
+        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"
+          alt="Print do projeto Tribute Page , onde é visto uma imagem com 8 pessoas conversando em um milharal.">
         <p>
           <span class="code">&lt;</span>
           Tribute Page
@@ -71,7 +76,8 @@
       </a>
 
       <a href="https://codepen.io/dev-joseronaldo/pen/rNydEPo" class="project-tile">
-        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="">
+        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"
+          alt="Print do projeto Tribute Page , onde é visto uma imagem com 8 pessoas conversando em um milharal.">
         <p>
           <span class="code">&lt;</span>
           Tribute Page
@@ -80,7 +86,8 @@
       </a>
 
       <a href="https://codepen.io/dev-joseronaldo/pen/rNydEPo" class="project-tile">
-        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="">
+        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"
+          alt="Print do projeto Tribute Page , onde é visto uma imagem com 8 pessoas conversando em um milharal.">
         <p>
           <span class="code">&lt;</span>
           Tribute Page
@@ -92,6 +99,48 @@
     <a href="https://codepen.io/FreeCodeCamp/" class="btn" target="_blank">Show all<i
         class="fas fa-chevron-right"></i></a>
   </section>
+
+  <section id="contacts">
+    <div class="text-box">
+      <h2>Let's work together...</h2>
+      <p>How do you take your coffee?</p>
+    </div>
+    <div class="contact">
+      <a href="https://facebook.com" target="_blank">
+        <i class="fab fa-facebook-square"></i>
+        Facebook
+      </a>
+      <a id="profile-link" href="https://github.com/Dev-JoseRonaldo" target="_blank">
+        <i class="fab fa-github"></i>
+        GitHub
+      </a>
+      <a href="https://twitter.com/" target="_blank">
+        <i class="fab fa-twitter"></i>
+        Twitter
+      </a>
+      <a href="mailto:dev.joseronaldo@gmail.com">
+        <i class="fas fa-at"></i>
+        Send a mail
+      </a>
+      <a href="tel:+550819890-98202">
+        <i class="fas fa-mobile-alt"></i>
+        Call me
+      </a>
+    </div>
+  </section>
+
+  <footer>
+    <p>
+      **This is just a fake portfolio. All the projects and contact details given
+      are not real.
+    </p>
+    <p>
+      © Created for
+      <a href="https://github.com/Dev-JoseRonaldo" target="_blank">José Ronaldo</a>
+      .
+    </p>
+  </footer>
+
 </body>
 
 </html>
